src/test/deca/context/extension/valid/TAB_access_assign.deca
{
   int[][] a = new int [2][659];
   float[][] b = new float [2][165];
   int[] c = new int [2];
   float[] d = new float [2];

   int[] e = a[0];
   float[] f = b[0];

   int z = a[65][0];
   float x = b[0][64];

   int y = c[0];
   float w = d[98];
}
