src/test/deca/context/extension/invalid/TAB_decl_index2.deca
{
    float[][] a = new float[3][9.1f];
}